--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "pm2 start ./bin/www --watch"
+    "dev": "pm2 start ./bin/www --watch",
+    "scss": "gulp"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -14,5 +15,10 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0"
   }
 }
