--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "pm2 start ./bin/www --watch",
-    "scss": "gulp"
+    "scss": "gulp",
+    "browserSync": "gulp server"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -18,6 +19,7 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "eslint": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0"
