--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "pm2 start ./bin/www --watch",
-    "scss": "gulp",
-    "browserSync": "gulp server"
+    "gulp": "gulp",
+    "server": "gulp server"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -19,8 +19,10 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.12",
     "eslint": "^4.0.0",
     "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0"
   }
