--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "browser-sync": "^2.18.12",
     "eslint": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
+    "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0"
   }
