--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0"
+    "gulp-sourcemaps": "^2.6.0",
+    "vconsole": "^2.5.2"
   }
 }
